src/vm/snapshots/hebi__vm__tests__for_iter_list.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
for item in ["a", "b", "c"]:
  print item


# Result:
Ok(
    None,
)

# Output:
a
b
c

