src/vm/snapshots/hebi__vm__tests__if_stmt.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := true
result := none
if v:
  result = "true"
else:
  result = "false"
result


# Result:
Ok(
    Object(
        "true",
    ),
)
