src/vm/snapshots/hebi__vm__tests__if_stmt_false.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := false
result := none
if v:
  result = "true"
else:
  result = "false"
result


# Result:
Ok(
    Object(
        "false",
    ),
)
