src/vm/snapshots/hebi__vm__tests__import_fn.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test
test.test("yo")


# Result:
Ok(
    Object(
        "yo",
    ),
)
