src/vm/snapshots/hebi__vm__tests__import_fn_named.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
from test import test
test("yo")


# Result:
Ok(
    Object(
        "yo",
    ),
)
