src/vm/snapshots/hebi__vm__tests__import_value.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test
test.value


# Result:
Ok(
    Int(
        100,
    ),
)
