src/vm/snapshots/hebi__vm__tests__import_value_named.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
from test import value
value


# Result:
Ok(
    Int(
        100,
    ),
)
